# parakeet-stt

./: .gitignore  Cargo.toml  LICENSE  README.md  mise.toml  package-lock.json  package.json  requirements.txt  transcribe.py
.github/workflows/: placeholder.yml
docs/: API.md  ARCHITECTURE.md  E2E-TESTING.md
parakeet_server/: audio_utils.py  requirements.txt  server.py  transcription.py
src/: App.vue  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  audio.rs  commands.rs  hotkey.rs  lib.rs  main.rs  rpc_client.rs  sound.rs  text_injector.rs
src/components/: AudioLevelMeter.vue  HotkeyRecorder.vue  StatusIndicator.vue
src/stores/: app.ts
src/views/: MenuBarView.vue  SettingsView.vue
