[package]
name = "parakeet-stt"
version = "0.1.0"
description = "ParakeetSTT - Speech to text desktop application"
authors = ["you"]
edition = "2021"

[lib]
name = "parakeet_stt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["multipart"] }
cpal = "0.15"
rodio = "0.19"
enigo = "0.3"
hotkey = "0.2"
clipboard = "0.5"
rusqlite = { version = "0.32", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5"

